# bricksorter-rs

./: .gitignore  Cargo.toml  README.md  deploy.sh  gen-docs.sh
src/: main.rs
