[package]
name = "bricksorter"
version = "0.1.0"
edition = "2021"

[dependencies]
ev3dev-lang-rust = { version="0.14.0", default-features=false, features=["ev3"] }
strum = "0.26.3"
strum_macros = "0.26.4"

[features]
drill = []  # Adds simulated waiting at s2 to simulate drilling
debug = []  # Debug output

[[bin]]
name = "stop"